<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contactes"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblNomInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nom"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nomContacte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/lblAdrecaContacte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adreca"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/adrecaContacte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/lblTelefonContacte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telefon"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/telefonContacte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/lblMailContacte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mailContacte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/lblDataContacte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dataContacte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="TextView" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/tornarContactes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:clickable="true"
            app:srcCompat="@android:drawable/ic_menu_revert" />
    </FrameLayout>

</LinearLayout>